Adding SQL Database

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,9 @@
 __pycache__/csv_parser.cpython-312.pyc
 __pycache__/report_generator.cpython-312.pyc
 __pycache__/smb_inspector.cpython-312.pyc
+__pycache__/*
 *.txt
 *.html
 *.js
 *.css
+.instance/*
