--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,5 @@ __pycache__/report_generator.cpython-312.pyc
 __pycache__/smb_inspector.cpython-312.pyc
 __pycache__/*
 *.txt
-*.html
-*.js
-*.css
+report.html
 .instance/*
